--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "sass-project-startkit",
-  "version": "0.0.1",
-  "description": "Sass 프로젝트 시작.",
-  "author": "joon9 <vxggangxv@naver.com> (http://toxnsldxn.cafe24.com)",
+  "name": "include-scss-template",
+  "version": "1.0.0",
+  "license": "UNLINCENSE",
+  "private": true,
+  "description": "Boilerplate",
+  "author": "hyejunk <vxggangxv@naver.com>",
+  "browserslist": [
+    "last 2 version",
+    "> 0.5%",
+    "IE >= 9"
+  ],
   "dependencies": {
-    "del": "^1.1.1"
+    "npm": "^6.5.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-compass": "^2.1.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-connect-multi": "^1.0.8",
-    "browser-sync": "^2.26.3",
-    "gulp-ejs": "^3.3.0",
-    "gulp-file-include": "^2.0.1",
-    "gulp-html-prettify": "0.0.1",
+    "gulp-file-include": "^2.1.0",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-copy": "^4.0.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^1.2.5",
-    "gulp-jade": "^0.10.0",
-    "gulp-plumber": "^0.6.6",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-rename": "^1.2.0",
-    "gulp-util": "^3.0.1",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^3.0.0",
-    "preen": "^1.2.0",
+    "gulp.spritesmith": "^6.10.1"
   }
 }
